--- a/src/app/board/board.component.scss
+++ b/src/app/board/board.component.scss
@@ -117,7 +117,8 @@ $innerShadow: inset -4px -4px 6px -1px rgba($lightShadow, 1),
     overflow-y: auto;
     max-height: 64vh;
 
-    mat-card {
+    mat-card,
+    .drag-pr {
         display: flex;
         width: 200px;
         border-radius: 24px;
@@ -162,6 +163,111 @@ $innerShadow: inset -4px -4px 6px -1px rgba($lightShadow, 1),
         }
     }
 }
+
+
+.cdk-drag-preview {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 240px;
+    border-radius: 24px;
+    margin-bottom: 12px;
+    margin-top: 12px;
+    background: #f1f4fd !important;
+    position: relative;
+    height: 116px;
+    max-height: 116px;
+    padding-bottom: 8px;
+    padding-top: 8px;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+
+    &:hover {
+        transform: scale3d(1.1, 1.1, 1.1);
+        transition: 225ms ease-in-out;
+        cursor: pointer;
+    }
+
+    div {
+        &:last-child {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            height: 112px;
+
+            div {
+                display: flex;
+                justify-content: space-between;
+                align-items: flex-end;
+                flex-direction: row;
+                width: 170px;
+                height: 38px;
+
+                mat-icon {
+                    font-size: 36px;
+                    height: 36px;
+                    width: 36px;
+                }
+            }
+        }
+    }
+}
+
+// ::ng-deep .cdk-drag-preview {
+//     display: flex  !important;
+//     flex-direction: column  !important;
+//     width: 200px !important;
+//     border-radius: 24px !important;
+//     margin-bottom: 12px !important;
+//     margin-top: 12px !important;
+//     background: #f1f4fd !important;
+//     position: relative;
+//     height: 116px !important;
+//     max-height: 116px  !important;
+//     padding-bottom: 8px !important;
+//     padding-top: 8px !important;
+//     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+
+//     div {
+//         &:last-child {
+//             display: flex;
+//             flex-direction: column;
+//             justify-content: space-between;
+//             height: 112px;
+
+//             div {
+//                 display: flex;
+//                 justify-content: space-between;
+//                 align-items: end;
+//                 flex-direction: row;
+//                 width: 170px;
+//                 height: 38px;
+
+//                 mat-icon {
+//                     font-size: 36px;
+//                     height: 36px;
+//                     width: 36px;
+//                 }
+//             }
+//         }
+//     }
+//   }
+
+//   .cdk-drag-placeholder {
+//     opacity: 0;
+//   }
+
+//   .cdk-drag-animating {
+//     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+//   }
+
+//   .example-box:last-child {
+//     border: none;
+//   }
+
+//   .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
+//     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+//   }
+
 
 .add-card {
     width: 200px;
