--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -78,7 +78,7 @@
                 [cdkDropListConnectedTo]="[inprogressList, awaitingfeedbackList, doneList]"
                 (cdkDropListDropped)="drop($event)">
                 <div *ngFor="let task of todoTask" cdkDrag>
-                    <mat-card class="hide-icons">
+                    <div class="task-card hide-icons">
                         <span class="task-category" [style.background-color]="getCategoryColor(task.category)">
                             {{ task.category }}</span>
 
@@ -102,7 +102,7 @@
                                 <mat-icon style="color: #FFA800" *ngIf="task.priority==='medium'">clear_all</mat-icon>
                             </div>
                         </div>
-                    </mat-card>
+                    </div>
 
                     <!-- <p *cdkDragPreview>Dropped Task</p> -->
                 </div>
@@ -129,7 +129,7 @@
                 [cdkDropListConnectedTo]="[todoList, awaitingfeedbackList, doneList]"
                 (cdkDropListDropped)="drop($event)">
                 <div *ngFor="let task of inprogressTask" cdkDrag>
-                    <mat-card class="hide-icons">
+                    <div class="task-card hide-icons">
                         <span class="task-category" [style.background-color]="getCategoryColor(task.category)">
                             {{ task.category }}</span>
 
@@ -153,7 +153,7 @@
                                 <mat-icon style="color: #FFA800" *ngIf="task.priority==='medium'">clear_all</mat-icon>
                             </div>
                         </div>
-                    </mat-card>
+                    </div>
                 </div>
 
                 <div class="add-card" (click)="openDialogAddTask('In progress')">
@@ -179,7 +179,7 @@
                 [cdkDropListConnectedTo]="[todoList, inprogressList, doneList]"
                 (cdkDropListDropped)="drop($event)">
                 <div *ngFor="let task of awaitingfeedbackTask" cdkDrag>
-                    <mat-card class="hide-icons">
+                    <div class="task-card hide-icons">
                         <span class="task-category" [style.background-color]="getCategoryColor(task.category)">
                             {{ task.category }}</span>
 
@@ -203,7 +203,7 @@
                                 <mat-icon style="color: #FFA800" *ngIf="task.priority==='medium'">clear_all</mat-icon>
                             </div>
                         </div>
-                    </mat-card>
+                    </div>
                 </div>
 
                 <div class="add-card" (click)="openDialogAddTask('Awaiting Feedback')">
@@ -227,8 +227,8 @@
             <div class="task-cards" cdkDropList #doneList="cdkDropList" id="Done" [cdkDropListData]="doneTask"
                 [cdkDropListConnectedTo]="[todoList, inprogressList, awaitingfeedbackList]"
                 (cdkDropListDropped)="drop($event)">
-                <div *ngFor="let task of doneTask">
-                    <mat-card class="hide-icons" cdkDrag>
+                <div *ngFor="let task of doneTask" cdkDrag>
+                    <div class="task-card hide-icons">
                         <span class="task-category" [style.background-color]="getCategoryColor(task.category)">
                             {{ task.category }}</span>
 
@@ -252,7 +252,7 @@
                                 <mat-icon style="color: #FFA800" *ngIf="task.priority==='medium'">clear_all</mat-icon>
                             </div>
                         </div>
-                    </mat-card>
+                    </div>
                 </div>
 
                 <div class="add-card" (click)="openDialogAddTask('Done')">
