--- a/src/app/board/board.component.scss
+++ b/src/app/board/board.component.scss
@@ -117,10 +117,9 @@ $innerShadow: inset -4px -4px 6px -1px rgba($lightShadow, 1),
     overflow-y: auto;
     max-height: 64vh;
 
-    mat-card,
-    .drag-pr {
+    .task-card {
         display: flex;
-        width: 200px;
+        width: 230px;
         border-radius: 24px;
         margin-bottom: 12px;
         margin-top: 12px;
@@ -144,6 +143,7 @@ $innerShadow: inset -4px -4px 6px -1px rgba($lightShadow, 1),
                 flex-direction: column;
                 justify-content: space-between;
                 height: 112px;
+                padding: 10px;
 
                 div {
                     display: flex;
@@ -152,6 +152,7 @@ $innerShadow: inset -4px -4px 6px -1px rgba($lightShadow, 1),
                     flex-direction: row;
                     width: 170px;
                     height: 38px;
+                    padding-left: 0;
 
                     mat-icon {
                         font-size: 36px;
@@ -166,108 +167,57 @@ $innerShadow: inset -4px -4px 6px -1px rgba($lightShadow, 1),
 
 
 .cdk-drag-preview {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 240px;
-    border-radius: 24px;
-    margin-bottom: 12px;
-    margin-top: 12px;
-    background: #f1f4fd !important;
-    position: relative;
-    height: 116px;
-    max-height: 116px;
-    padding-bottom: 8px;
-    padding-top: 8px;
-    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+    .task-card {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 230px;
+        border-radius: 24px;
+        margin-bottom: 12px;
+        margin-top: 12px;
+        background: #f1f4fd;
+        position: relative;
+        height: 116px;
+        max-height: 116px;
+        padding-bottom: 8px;
+        padding-top: 8px;
+        box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+        opacity: 0.7;
 
-    &:hover {
-        transform: scale3d(1.1, 1.1, 1.1);
-        transition: 225ms ease-in-out;
-        cursor: pointer;
-    }
+        &:hover {
+            transform: scale3d(1.1, 1.1, 1.1);
+            transition: 225ms ease-in-out;
+            cursor: pointer;
+        }
 
-    div {
-        &:last-child {
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            height: 112px;
-
-            div {
+        div {
+            &:last-child {
                 display: flex;
+                flex-direction: column;
                 justify-content: space-between;
-                align-items: flex-end;
-                flex-direction: row;
-                width: 170px;
-                height: 38px;
+                height: 112px;
+                padding: 10px;
 
-                mat-icon {
-                    font-size: 36px;
-                    height: 36px;
-                    width: 36px;
+                div {
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: end;
+                    flex-direction: row;
+                    width: 170px;
+                    height: 38px;
+                    padding-left: 0;
+
+                    mat-icon {
+                        font-size: 36px;
+                        height: 36px;
+                        width: 36px;
+                    }
                 }
             }
         }
+
     }
 }
-
-// ::ng-deep .cdk-drag-preview {
-//     display: flex  !important;
-//     flex-direction: column  !important;
-//     width: 200px !important;
-//     border-radius: 24px !important;
-//     margin-bottom: 12px !important;
-//     margin-top: 12px !important;
-//     background: #f1f4fd !important;
-//     position: relative;
-//     height: 116px !important;
-//     max-height: 116px  !important;
-//     padding-bottom: 8px !important;
-//     padding-top: 8px !important;
-//     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
-
-//     div {
-//         &:last-child {
-//             display: flex;
-//             flex-direction: column;
-//             justify-content: space-between;
-//             height: 112px;
-
-//             div {
-//                 display: flex;
-//                 justify-content: space-between;
-//                 align-items: end;
-//                 flex-direction: row;
-//                 width: 170px;
-//                 height: 38px;
-
-//                 mat-icon {
-//                     font-size: 36px;
-//                     height: 36px;
-//                     width: 36px;
-//                 }
-//             }
-//         }
-//     }
-//   }
-
-//   .cdk-drag-placeholder {
-//     opacity: 0;
-//   }
-
-//   .cdk-drag-animating {
-//     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-//   }
-
-//   .example-box:last-child {
-//     border: none;
-//   }
-
-//   .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
-//     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-//   }
-
 
 .add-card {
     width: 200px;
@@ -290,7 +240,6 @@ $innerShadow: inset -4px -4px 6px -1px rgba($lightShadow, 1),
 }
 
 .task-category {
-    // background: var(--orange);
     color: white;
     transform: rotate(90deg);
     width: 132px;
