--- a/src/app/board/board.component.scss
+++ b/src/app/board/board.component.scss
@@ -108,6 +108,11 @@ $innerShadow: inset -4px -4px 6px -1px rgba($lightShadow, 1),
     border: 3px dotted rgb(255 255 255 / 12%);
     background: rgb(255 255 255 / 12%);
     border-radius: 24px;
+
+    &:hover {
+        border: 3px dotted rgb(255 255 255 / 50%);
+        background: rgb(255 255 255 / 4%);
+    }
 }
 
 .task-cards {
@@ -134,7 +139,7 @@ $innerShadow: inset -4px -4px 6px -1px rgba($lightShadow, 1),
         &:hover {
             transform: scale3d(1.1, 1.1, 1.1);
             transition: 225ms ease-in-out;
-            cursor: pointer;
+            cursor: grab !important;
         }
 
         div {
@@ -187,7 +192,6 @@ $innerShadow: inset -4px -4px 6px -1px rgba($lightShadow, 1),
         &:hover {
             transform: scale3d(1.1, 1.1, 1.1);
             transition: 225ms ease-in-out;
-            cursor: pointer;
         }
 
         div {
