--- a/src/app/dialog-task-details/dialog-task-details.component.html
+++ b/src/app/dialog-task-details/dialog-task-details.component.html
@@ -4,22 +4,22 @@
     </button>
 
     <div class="task-h">
-        <h1>Add task to: {{ taskStatus }}</h1>
+        <h1>Task Details</h1>
     </div>
 
     <div class="task-box">
         <div class="left-box">
             <mat-form-field class="input-shadow input-box height-36">
-                <input matInput type="text" placeholder="Title" [(ngModel)]="task.title">
+                <input matInput type="text" placeholder="Title" [(ngModel)]="taskData.title">
             </mat-form-field>
 
             <mat-form-field class="input-shadow input-box">
                 <textarea class="textarea-input" matInput type="text" placeholder="Description"
-                    [(ngModel)]="task.description"></textarea>
+                    [(ngModel)]="taskData.description"></textarea>
             </mat-form-field>
 
             <div class="input-box">
-                <select class="description-option input-shadow" [(ngModel)]="selectedCategory"
+                <select class="description-option input-shadow" [(ngModel)]="taskData.category"
                     (change)="selectCategory()">
                     <option [ngValue]="undefined" [disabled]="true">Choose category...</option>
                     <option value="{{ category }}" *ngFor="let category of categoryList">{{ category }}</option>
@@ -30,7 +30,8 @@
         <div class="right-box">
             <mat-form-field class="input-shadow input-box height-36">
                 <mat-label for="dueDate">Due Date</mat-label>
-                <input [min]="minDate" matInput [matDatepicker]="picker" placeholder="mm/dd/yyyy" [(ngModel)]="dueDate">
+                <input matInput [value]="taskData.dueDate | date:'dd/MM/yyyy'">
+                <!-- <input [min]="minDate" matInput [matDatepicker]="picker" [(ngModel)]="taskData.dueDate"> -->
                 <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                 <mat-datepicker #picker></mat-datepicker>
             </mat-form-field>
@@ -38,8 +39,8 @@
             <div class="priotity-section">
                 <mat-form-field class="input-shadow input-box hover-prio">
                     <mat-label *ngIf="clickPriority">Priority</mat-label>
-                    <input [(ngModel)]="task.priority" matInput class="d-none">
-                    <mat-radio-group class="example-radio-group" [(ngModel)]="task.priority">
+                    <input [(ngModel)]="taskData.priority" matInput class="d-none">
+                    <mat-radio-group class="example-radio-group" [(ngModel)]="taskData.priority">
                         <div *ngFor="let button of priorityBtn" class="btn-shadow">
                             <mat-radio-button class="example-radio-button" value="{{ button.name }}"
                                 (click)="clickPriority = true">
@@ -52,7 +53,7 @@
             </div>
 
             <div class="input-box">
-                <select class="description-option input-shadow" [(ngModel)]="task.assignedTo">
+                <select class="description-option input-shadow" [(ngModel)]="taskData.assignedTo">
                     <option value="" disabled selected>Assigned to...</option>
                     <option value="person">Person</option>
                 </select>
