--- a/src/app/dialog-task-details/dialog-task-details.component.html
+++ b/src/app/dialog-task-details/dialog-task-details.component.html
@@ -30,20 +30,19 @@
         <div class="right-box">
             <mat-form-field class="input-shadow input-box height-36">
                 <mat-label for="dueDate">Due Date</mat-label>
-                <input matInput [value]="taskData.dueDate | date:'dd/MM/yyyy'">
-                <!-- <input [min]="minDate" matInput [matDatepicker]="picker" [(ngModel)]="taskData.dueDate"> -->
+                <input matInput [value]="taskData.dueDate | date:'M/d/yyyy'" *ngIf="!dateChange">
+                <input [min]="minDate" matInput [matDatepicker]="picker" [(ngModel)]="taskData.dueDate" (dateChange)="dateChange = true">
                 <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                 <mat-datepicker #picker></mat-datepicker>
             </mat-form-field>
 
             <div class="priotity-section">
                 <mat-form-field class="input-shadow input-box hover-prio">
-                    <mat-label *ngIf="clickPriority">Priority</mat-label>
+                    <mat-label>Priority</mat-label>
                     <input [(ngModel)]="taskData.priority" matInput class="d-none">
                     <mat-radio-group class="example-radio-group" [(ngModel)]="taskData.priority">
                         <div *ngFor="let button of priorityBtn" class="btn-shadow">
-                            <mat-radio-button class="example-radio-button" value="{{ button.name }}"
-                                (click)="clickPriority = true">
+                            <mat-radio-button class="example-radio-button" value="{{ button.name }}">
                                 {{ button.name[0].toUpperCase() }}{{ button.name.slice(1).toLowerCase() }}
                                 <mat-icon class="{{ button.name }}-btn">{{ button.icon }}</mat-icon>
                             </mat-radio-button>
