--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -35,7 +35,7 @@
                 <mat-icon>person_add</mat-icon>
             </button>
 
-            <button mat-icon-button matTooltip="Open Archive" matTooltipPosition="right" matTooltipClass="tooltip-blue">
+            <button routerLink="/archiv" mat-icon-button matTooltip="Open Archive" matTooltipPosition="right" matTooltipClass="tooltip-blue">
                 <mat-icon>archive</mat-icon>
             </button>
         </div>
