--- a/src/app/dialog-add-task/dialog-add-task.component.html
+++ b/src/app/dialog-add-task/dialog-add-task.component.html
@@ -30,7 +30,7 @@
         <div class="right-box">
             <mat-form-field class="input-shadow input-box height-36">
                 <mat-label for="dueDate">Due Date</mat-label>
-                <input [min]="minDate" matInput [matDatepicker]="picker" placeholder="mm/dd/yyyy" [(ngModel)]="dueDate">
+                <input #dateInput [min]="minDate" matInput [matDatepicker]="picker" placeholder="mm/dd/yyyy" [(ngModel)]="dueDate">
                 <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                 <mat-datepicker #picker></mat-datepicker>
             </mat-form-field>
@@ -61,13 +61,13 @@
     </div>
 
     <div class="button-box">
-        <div>
-            Clear
-            <mat-icon>close</mat-icon>
+        <div (click)="clearForm()">
+            <!-- Clear -->
+            <mat-icon>cleaning_services</mat-icon>
         </div>
 
         <div (click)="saveTask()">
-            Save
+            <!-- Save -->
             <mat-icon>done</mat-icon>
         </div>
     </div>
