--- a/src/app/dialog-task-details/dialog-task-details.component.scss
+++ b/src/app/dialog-task-details/dialog-task-details.component.scss
@@ -20,7 +20,7 @@ $dropShadow: 8px 8px 12px -2px rgba($darkShadow, 0.4),
 $innerShadow: inset -4px -4px 6px -1px rgba($lightShadow, 1),
     inset 2px 2px 8px -1px rgba($darkShadow, 0.5);
 
-.mat-dialog-container {
+::ng-deep .mat-dialog-container {
     border-radius: 24px;
     background-color: $bgColor;
 }
@@ -77,7 +77,7 @@ $innerShadow: inset -4px -4px 6px -1px rgba($lightShadow, 1),
 }
 
 .right-box {
-    mat-datepicker-toggle {
+    ::ng-deep .mat-datepicker-toggle {
         button {
             height: 42px !important;
             width: 30px !important;
@@ -97,13 +97,13 @@ $innerShadow: inset -4px -4px 6px -1px rgba($lightShadow, 1),
     //     color: var(--header);
     // }
 
-    mat-radio-group {
+    ::ng-deep .mat-radio-group {
         display: flex;
         justify-content: space-evenly;
         // margin-top: 24px;
     }
 
-    .mat-radio-button {
+    ::ng-deep .mat-radio-button {
         display: flex;
         justify-content: center;
 
@@ -114,18 +114,18 @@ $innerShadow: inset -4px -4px 6px -1px rgba($lightShadow, 1),
         }
     }
 
-    .mat-radio-button.mat-accent.mat-radio-checked .mat-radio-outer-circle {
+    ::ng-deep .mat-radio-button.mat-accent.mat-radio-checked .mat-radio-outer-circle {
         border-color: var(--header);
     }
 
-    .mat-radio-button.mat-accent .mat-radio-inner-circle,
+    ::ng-deep .mat-radio-button.mat-accent .mat-radio-inner-circle,
     .mat-radio-button.mat-accent .mat-radio-ripple .mat-ripple-element:not(.mat-radio-persistent-ripple),
     .mat-radio-button.mat-accent.mat-radio-checked .mat-radio-persistent-ripple,
     .mat-radio-button.mat-accent:active .mat-radio-persistent-ripple {
         background-color: var(--header);
     }
 
-    .mat-form-field-appearance-legacy .mat-form-field-underline {
+    ::ng-deep .mat-form-field-appearance-legacy .mat-form-field-underline {
         background-color: unset !important;
     }
 }
@@ -142,26 +142,26 @@ $innerShadow: inset -4px -4px 6px -1px rgba($lightShadow, 1),
     color: #7AE229;
 }
 
-.mat-focused .mat-form-field-label {
+::ng-deep .mat-focused .mat-form-field-label {
     // color: var(--header) !important;
     color: var(--header) !important;
 }
 
-.mat-form-field-underline {
+::ng-deep .mat-form-field-underline {
     // background-color: var(--header) !important;
     background-color: $bgColor !important;
 }
 
-.mat-form-field-ripple {
+::ng-deep .mat-form-field-ripple {
     // background-color: var(--header) !important;
     background-color: $bgColor !important;
 }
 
-.mat-form-field-appearance-fill .mat-form-field-infix {
+::ng-deep .mat-form-field-appearance-fill .mat-form-field-infix {
     display: flex !important;
 }
 
-.mat-form-field-appearance-outline .mat-form-field-outline-thick {
+::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline-thick {
     color: var(--header) !important;
 }
 
