--- a/src/app/dialog-add-task/dialog-add-task.component.html
+++ b/src/app/dialog-add-task/dialog-add-task.component.html
@@ -1,3 +1,7 @@
+<div class="spinner-box" *ngIf="loadSpinner">
+    <mat-spinner></mat-spinner>
+</div>
+
 <div class="add-task-container">
     <button mat-icon-button class="close-btn" (click)="dialogRef.close()">
         <mat-icon>close</mat-icon>
