--- a/src/app/dialog-add-task/dialog-add-task.component.scss
+++ b/src/app/dialog-add-task/dialog-add-task.component.scss
@@ -316,3 +316,20 @@ $innerShadow: inset -4px -4px 6px -1px rgba($lightShadow, 1),
         border: 1px solid white;
     }
 }
+
+.spinner-box {
+    position: absolute;
+    top: 0;
+    z-index: 1;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #ffffffb5;
+    left: 0;
+}
+
+.mat-progress-spinner circle, .mat-spinner circle {
+    stroke: var(--header);
+}
