add status to task details, check date in past

--- a/src/app/board/board.component.scss
+++ b/src/app/board/board.component.scss
@@ -346,3 +346,7 @@ $innerShadow: inset -4px -4px 6px -1px rgba($lightShadow, 1),
         color: rgba(255, 255, 255, 0.712);
     }
 }
+
+.bg-past {
+    color: red !important;
+}
