--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -42,8 +42,9 @@
                             {{ task.category }}</span>
 
                         <div (click)="openTaskDetails(task.id)">
-                            <span class="task-date">
+                            <span class="task-date" [class.bg-past]="task.dueDate < todayDate">
                                 {{ task.dueDate | date: "MMM" }} {{ task.dueDate | date: "dd" }}, {{ task.dueDate | date: "yyyy" }}
+                                <mat-icon *ngIf="task.dueDate < todayDate">notification_important</mat-icon>
                             </span>
                             <h4 class="task-name">{{ task.title }}</h4>
                             <div>
@@ -93,8 +94,9 @@
                             {{ task.category }}</span>
 
                         <div (click)="openTaskDetails(task.id)">
-                            <span class="task-date">
+                            <span class="task-date" [class.bg-past]="task.dueDate < todayDate">
                                 {{ task.dueDate | date: "MMM" }} {{ task.dueDate | date: "dd" }}, {{ task.dueDate | date: "yyyy" }}
+                                <mat-icon *ngIf="task.dueDate < todayDate">notification_important</mat-icon>
                             </span>
                             <h4 class="task-name">{{ task.title }}</h4>
                             <div>
@@ -144,8 +146,9 @@
                             {{ task.category }}</span>
 
                         <div (click)="openTaskDetails(task.id)">
-                            <span class="task-date">
+                            <span class="task-date" [class.bg-past]="task.dueDate < todayDate">
                                 {{ task.dueDate | date: "MMM" }} {{ task.dueDate | date: "dd" }}, {{ task.dueDate | date: "yyyy" }}
+                                <mat-icon *ngIf="task.dueDate < todayDate">notification_important</mat-icon>
                             </span>
                             <h4 class="task-name">{{ task.title }}</h4>
                             <div>
@@ -195,8 +198,9 @@
                             {{ task.category }}</span>
 
                         <div (click)="openTaskDetails(task.id)">
-                            <span class="task-date">
+                            <span class="task-date" [class.bg-past]="task.dueDate < todayDate">
                                 {{ task.dueDate | date: "MMM" }} {{ task.dueDate | date: "dd" }}, {{ task.dueDate | date: "yyyy" }}
+                                <mat-icon *ngIf="task.dueDate < todayDate">notification_important</mat-icon>
                             </span>
                             <h4 class="task-name">{{ task.title }}</h4>
                             <div>
