get upcoming deadline

--- a/src/app/summary/summary.component.html
+++ b/src/app/summary/summary.component.html
@@ -38,7 +38,7 @@
                     </div>
 
                     <div class="urgent-date">
-                        <h4>{{ month }} {{ today | date: "dd" }}, {{ today | date: "yyyy" }}</h4>
+                        <h4>{{ upcomingDeadline | date: "MMMM" }} {{ upcomingDeadline | date: "dd" }}, {{ upcomingDeadline | date: "yyyy" }}</h4>
                         <h4>Upcoming Deadline</h4>
                     </div>
                 </mat-card>
