--- a/src/app/board/board.component.scss
+++ b/src/app/board/board.component.scss
@@ -349,4 +349,8 @@ $innerShadow: inset -4px -4px 6px -1px rgba($lightShadow, 1),
 
 .bg-past {
     color: red !important;
+
+    mat-icon {
+        margin-top: -8px;
+    }
 }
